# ser4cpp

cmake/: ser4cppConfig.cmake.in
src/: CMakeLists.txt
